# yaoe

./: .gitignore  Cargo.toml  README.md  flake.nix
.config/: nextest.toml
crates/yaoe-cli/: Cargo.toml
crates/yaoe-cli/src/: main.rs
crates/yaoe-cli/tests/: cli.rs
crates/yaoe-cloudflare/: Cargo.toml
crates/yaoe-cloudflare/src/: lib.rs  r2.rs
crates/yaoe-config/: Cargo.toml
crates/yaoe-config/src/: lib.rs  model.rs  validate.rs
crates/yaoe-controller/: Cargo.toml
crates/yaoe-controller/src/: deps.rs  lib.rs  logging.rs  system.rs
crates/yaoe-controller/tests/: acceptance_delivery.rs  integration.rs
crates/yaoe-gitee/: Cargo.toml
crates/yaoe-gitee/src/: api.rs  git.rs  lib.rs  publish.rs  urls.rs
crates/yaoe-home/: Cargo.toml
crates/yaoe-home/src/: constants.rs  core.rs  home.rs  lib.rs  paths.rs
crates/yaoe-package/: Cargo.toml
crates/yaoe-package/src/: builder.rs  digest.rs  lib.rs
crates/yaoe-render/: Cargo.toml
crates/yaoe-render/src/: client.rs  lib.rs  scripts.rs  server.rs
crates/yaoe-rules/: Cargo.toml
crates/yaoe-rules/src/: lib.rs
crates/yaoe-server-installer/: Cargo.toml
crates/yaoe-server-installer/src/: lib.rs
crates/yaoe-ssh/: Cargo.toml
crates/yaoe-ssh/src/: fake.rs  lib.rs  real.rs  transport.rs
crates/yaoe-upstream/: Cargo.toml
crates/yaoe-upstream/src/: fetch.rs  lib.rs  runtime.rs
docs/: design.md
