[package]
name = "yaoe-cloudflare"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
wait-timeout.workspace = true
yaoe-home.workspace = true

[dev-dependencies]
serde_json.workspace = true
