[package]
name = "yaoe-gitee"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
yaoe-home.workspace = true

[dev-dependencies]
tempfile.workspace = true
