[package]
name = "yaoe-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ipnet.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
yaoe-config.workspace = true
yaoe-home.workspace = true

[dev-dependencies]
serde_json.workspace = true
