[package]
name = "yaoe-ssh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
libc.workspace = true
serde.workspace = true
toml.workspace = true
wait-timeout.workspace = true
yaoe-home.workspace = true

[dev-dependencies]
tempfile.workspace = true
